--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -17,8 +17,8 @@
             </a>
           </li>
           <li>
-            <a class="dope-link last-played-link" href="#">
-              Last played
+            <a class="dope-link previous-link" href="#">
+              Previously played
             </a>
           </li>
           {% if user.is_authenticated %}
@@ -114,8 +114,8 @@
       </a>
     </li>
     <li>
-      <a class="dope-link last-played-link" href="#">
-        Last played
+      <a class="dope-link previous-link" href="#">
+        Previously played
       </a>
     </li>
     {% if user.is_authenticated %}
