--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -12,7 +12,7 @@
             Listen
           </h1>
         </div>
-        {% with last_played as results %}
+        {% with previous as results %}
           {% include "listen.min.html" %}
         {% endwith %}
       </div>
